[metadata]
name = qcmip6
author = Paola Petrelli
author-email = Paola.Petrelli@utas.edu.au
summary = CMIP6 Quality Assurance library
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5

[files]
packages = 
    qcmip6

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    conftest.py
    test

[entry_points]
console_scripts =

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py
